<resources>
    <string name="app_name">MovieBooking</string>

    <!-- Login Screen -->
    <string name="login_title">Đăng Nhập</string>
    <string name="login_subtitle">Đặt vé xem phim dễ dàng</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="login_button">Đăng nhập</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="or_continue_with">Hoặc tiếp tục với</string>
    <string name="google_login">Google</string>
    <string name="facebook_login">Facebook</string>

    <!-- Register Screen -->
    <string name="register_title">Đăng Ký</string>
    <string name="register_subtitle">Tạo tài khoản mới</string>
    <string name="name_hint">Họ và tên</string>
    <string name="phone_hint">Số điện thoại</string>
    <string name="age_hint">Tuổi</string>
    <string name="address_hint">Địa chỉ</string>
    <string name="avatar_hint">URL Avatar (tùy chọn)</string>
    <string name="confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="register_button">Đăng ký</string>
    <string name="already_have_account">Đã có tài khoản?</string>
    <string name="login">Đăng nhập</string>

    <!-- Forgot Password Screen -->
    <string name="forgot_password_title">Quên Mật Khẩu</string>
    <string name="forgot_password_subtitle">Nhập email của bạn để nhận mã OTP</string>
    <string name="send_otp">Gửi mã OTP</string>
    <string name="verify_otp_title">Xác Thực OTP</string>
    <string name="verify_otp_subtitle">Nhập mã OTP đã được gửi đến email của bạn</string>
    <string name="otp_sent_message">Mã OTP đã được gửi đến email của bạn</string>
    <string name="otp_hint">Mã OTP</string>
    <string name="verify_otp">Xác thực</string>
    <string name="resend_otp">Gửi lại mã OTP</string>
    <string name="reset_password_title">Đặt Lại Mật Khẩu</string>
    <string name="reset_password_subtitle">Nhập mật khẩu mới của bạn</string>
    <string name="new_password_hint">Mật khẩu mới</string>
    <string name="confirm_new_password_hint">Xác nhận mật khẩu mới</string>
    <string name="reset_password">Đặt lại mật khẩu</string>

    <!-- Validation Messages -->
    <string name="email_required">Email không được để trống</string>
    <string name="password_required">Mật khẩu không được để trống</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="login_failed">Đăng nhập thất bại. Vui lòng thử lại!</string>
    <string name="name_required">Họ tên không được để trống</string>
    <string name="phone_required">Số điện thoại không được để trống</string>
    <string name="address_required">Địa chỉ không được để trống</string>
    <string name="age_required">Tuổi không được để trống</string>
    <string name="invalid_phone">Số điện thoại không hợp lệ</string>
    <string name="invalid_age">Tuổi phải từ 13 đến 120</string>
    <string name="password_not_match">Mật khẩu xác nhận không khớp</string>
    <string name="password_too_short">Mật khẩu phải có ít nhất 4 ký tự</string>
    <string name="register_success">Đăng ký thành công!</string>
    <string name="register_failed">Đăng ký thất bại. Vui lòng thử lại!</string>

    <!-- Home Screen -->
    <string name="home">Trang chủ</string>
    <string name="tickets">Vé của tôi</string>
    <string name="profile">Tài khoản</string>
    <string name="my_tickets">Vé của tôi</string>
    <string name="search">Tìm kiếm</string>
    <string name="logout">Đăng xuất</string>

    <!-- Home Fragment -->
    <string name="now_showing">Đang chiếu</string>
    <string name="coming_soon">Sắp chiếu</string>
    <string name="view_all">Xem tất cả</string>
    <string name="featured_movies">Phim nổi bật</string>
    <string name="book_now">Đặt vé ngay</string>

    <!-- Movie Details -->
    <string name="duration">Thời lượng</string>
    <string name="rating">Đánh giá</string>
    <string name="genre">Thể loại</string>
    <string name="release_date">Ngày khởi chiếu</string>
    <string name="director">Đạo diễn</string>
    <string name="cast">Diễn viên</string>
    <string name="description">Mô tả</string>

    <!-- Profile -->
    <string name="edit_profile">Chỉnh sửa thông tin</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="booking_history">Lịch sử đặt vé</string>
    <string name="settings">Cài đặt</string>
    <string name="about">Giới thiệu</string>
    <string name="help">Trợ giúp</string>

    <!-- Tickets -->
    <string name="active_tickets">Vé đang hoạt động</string>
    <string name="past_tickets">Vé đã sử dụng</string>
    <string name="no_tickets">Bạn chưa có vé nào</string>
    <string name="ticket_code">Mã vé</string>
    <string name="seat">Ghế</string>
    <string name="showtime">Suất chiếu</string>
    <string name="cinema">Rạp chiếu</string>

    <!-- Movie Detail Screen -->
    <string name="movie_title">Movie Title</string>
    <string name="movie_year">2024</string>
    <string name="movie_runtime">2h 30m</string>
    <string name="movie_rating">⭐ 8.5</string>
    <string name="movie_status">Released</string>
    <string name="genres_title">Thể loại</string>
    <string name="genres_placeholder">Action, Adventure, Sci-Fi</string>
    <string name="overview_title">Tóm tắt</string>
    <string name="overview_placeholder">Movie overview will be displayed here...</string>
    <string name="book_ticket">Đặt vé</string>
    <string name="view_homepage">Xem trang chủ phim</string>
    <string name="booking_feature_coming_soon">Chức năng đặt vé đang được phát triển</string>
    <string name="no_homepage">Không có trang chủ phim</string>
    <string name="failed_load_movie_details">Không thể tải thông tin phim</string>
    <string name="server_error">Lỗi server: %d</string>
    <string name="network_error">Lỗi mạng: %s</string>
    <string name="status_unknown">Unknown</string>
    <string name="no_overview">Không có thông tin tóm tắt</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="all_movies">Tất cả phim</string>

    <!-- Booking & Showtime -->
    <string name="no_seat_selected">Ghế đã chọn: Chưa chọn</string>
    <string name="showtime_list">Lịch Chiếu</string>
    <string name="showtime_detail">Chi Tiết Lịch Chiếu</string>

</resources>